2.0b1
- Support for multiple threads
- Move variables fomr config.ini to JSON storage
- Add datetime to output
- Display total number of pages when querying a page
- When debug mode is enabled all posts in each thread will be fetched
- Display how many threads there's still left to query

1.0.3
- Fetch and display thread title

1.0.2
- Only save data when not in debug mode
- Show a message if there's no new updates
- Only update the first post if there's new updates

1.0.1
- Show a message when the first post is updated

1.0
- Initial release